# json2cpp

./: .gitignore  README.ko.md  README.md  USAGE.md  go.mod  main.go  test_input.json  test_rapidjson  test_simple.json
.github/workflows/: ci.yml  release.yml
cmd/: root.go
examples/: api-response.json  config.json  edge-cases.json  generated_example.h  order.json  product.json  user.json
internal/codegen/: adapter.go  codegen.go  interface.go  jsoncpp.go  nlohmann.go  rapidjson.go
internal/nameutil/: nameutil.go  nameutil_test.go
internal/parser/: parser.go
internal/types/: types.go
templates/: embed.go
templates/adapter/: json_adapter.h  json_ptr.h  jsoncpp_adapter.cpp  jsoncpp_adapter.h  nlohmann_adapter.cpp  nlohmann_adapter.h  rapidjson_adapter.cpp  rapidjson_adapter.h
test/: CMakeLists.txt  test_basic.cpp  test_rapidjson.cpp  test_serialization.cpp  test_simple.cpp
